# pyflipt

./: Makefile  README.md  example.py  pyproject.toml  setup.cfg
pyflipt/: __init__.py  client.py  models.py
